[tool.poetry]
name = "canonicalize-psmiles"
version = "0.1.2"
description = "Canonicalize PSMILES strings."
authors = ["Christopher Kuenneth <christopher.kuenneth@gmail.com>"]
readme = "README.md"
packages = [{include = "canonicalize_psmiles"}]

[tool.poetry.dependencies]
python = "^3.7"
rdkit = ">=2022.3.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.2"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
